方案1-Jenkins-ArgoCD/辅助项目-nginx-gitops-demo/gitea/05-git-push-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: git-push
  namespace: git
spec:
  restartPolicy: Never
  containers:
    - name: git
      image: ${HARBOR_IP}/library/jenkins:lts
      command: ["sleep", "3600"]
      volumeMounts:
        - name: repos
          mountPath: /repos
  volumes:
    - name: repos
      persistentVolumeClaim:
        claimName: git-repos
