方案1-Jenkins-ArgoCD/辅助项目-nginx-gitops-demo/gitea/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea
  namespace: git
spec:
  ingressClassName: ${INGRESS_CLASS}
  rules:
    - host: gitea.test
      http:
        paths:
          - backend:
              service:
                name: gitea
                port:
                  number: 3000
            path: /
            pathType: Prefix
